--- a/src/frame/arrow.scroll/style.scss
+++ b/src/frame/arrow.scroll/style.scss
@@ -6,18 +6,19 @@
   position: relative;
   overflow: hidden;
   &-left_arrow, &-right_arrow {
-    position: absolute;
-    display: flex;
-    align-items: center;
-    width: 58px;
-    height: 100%;
-    background: linear-gradient(to left, var(--B2) 42.24%, transparent 95.69%);
     cursor: pointer;
-    z-index: 11;
+    z-index: 111;
+    &.gradient-arrow {
+      position: absolute;
+      width: 58px;
+      display: flex;
+      align-items: center;
+      height: 100%;
+    }
     svg {
       fill: var(--T8);
       box-sizing: border-box;
-      color: var(--B0bdc0);
+      color: var(--T8);
       cursor: pointer;
       font-size: 20px;
       height: 1em;
@@ -27,14 +28,24 @@
     }
   }
   &-left_arrow {
-    left: 0;
-    background: linear-gradient(to right, var(--B2) 42.24%, transparent 95.69%);
-    justify-content: flex-start;
+    &.block-arrow {
+      margin-right: 8px;
+    }
+    &.gradient-arrow {
+      left: 0;
+      background: linear-gradient(to right, var(--B2) 42.24%, transparent 95.69%);
+      justify-content: flex-start;
+    }
   }
   &-right_arrow {
-    right: 0;
-    background: linear-gradient(to left, var(--B2) 42.24%, transparent 95.69%);
-    justify-content: flex-end;
+    &.block-arrow {
+      margin-left: 8px;
+    }
+    &.gradient-arrow {
+      right: 0;
+      background: linear-gradient(to left, var(--B2) 42.24%, transparent 95.69%);
+      justify-content: flex-end;
+    }
   }
 
   &-content {
@@ -42,7 +53,13 @@
     display: flex;
     align-items: center;
     overflow-x: auto;
+    overflow-y: hidden;
     width: 100%;
+    scroll-behavior: smooth;
+    &-end, &-start {
+      height: 0;
+      width: 0;
+    }
     &::-webkit-scrollbar {
       display: none;
       width: 0px;
